login funktionalität hinzugefügt

--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
@@ -4,7 +4,8 @@
                       [(ngModel)]="user.name">
     </terra-text-input>
     <terra-text-input [inputName]="'Passwort'"
-                      [(ngModel)]="user.password">
+                      [(ngModel)]="user.password"
+                      [inputIsPassword]="true"  >
     </terra-text-input>
     <!--<terra-select-box-->
             <!--[inputName]="'Sprache'"-->
