- richtiges routing eingefügt

--- a/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
@@ -12,7 +12,7 @@
             <h2>{{ 'startNow' | translate:lang }}</h2>
             <br>
             <div class="center">
-                <terra-button [inputCaption]="'startHere' | translate:lang"
+                <terra-button [inputCaption]="'Logout'"
                               (outputClicked)="redirectToSomethingWentWrong()">
                 </terra-button>
             </div>
