--- a/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
@@ -13,7 +13,7 @@
             <br>
             <div class="center">
                 <terra-button [inputCaption]="'Logout'"
-                              (outputClicked)="redirectToSomethingWentWrong()">
+                              (outputClicked)="logout()">
                 </terra-button>
             </div>
         </div>
