--- a/wbs-alarm/wbs-frontend/src/app/app-wbs-kleiderkammer.html
+++ b/wbs-alarm/wbs-frontend/src/app/app-wbs-kleiderkammer.html
@@ -1,3 +1,5 @@
 <terra-alert-panel></terra-alert-panel>
 
-<router-outlet></router-outlet>
+<div class="placer">
+    <router-outlet></router-outlet>
+</div>
