- added menu and first entry

--- a/wbs-alarm/wbs-frontend/src/app/app-wbs-kleiderkammer.html
+++ b/wbs-alarm/wbs-frontend/src/app/app-wbs-kleiderkammer.html
@@ -1,5 +1,7 @@
 <terra-alert-panel></terra-alert-panel>
+<navigation-bar>
 
+</navigation-bar>
 <div class="placer">
     <router-outlet></router-outlet>
 </div>
