--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
@@ -14,35 +14,46 @@
 {
   color: white;
   position: relative;
-  top: 35%;
   vertical-align: middle;
   text-decoration: underline;
-  left: 1%;
+  border-right: 1px solid lightgray;
+  padding-left: 20px;
+  padding-right: 20px;
   height: 100%;
   display: inline-block;
-  bottom: 10%;
   z-index: 2;
+
+  .caption
+  {
+    position: relative;
+    top: 30%
+  }
+
+  &:hover
+  {
+    background-color: var(--color-active);
+    cursor: pointer;
+  }
 }
 
 .menu-entry-user {
   color: white;
-  position: relative;
+  position: absolute;
   top: 35%;
   vertical-align: middle;
-  text-decoration: underline;
-  left: 95%;
+  left: 97%;
   height: 100%;
-  display: inline-block;
+  //display: inline-block;
   bottom: 10%;
   z-index: 2;
 
   .user-icon
   {
-    position: relative;
+    position: absolute;
     height: 93%;
-    display: inline-block;
-    bottom: 30%;
-    vertical-align: middle;
+    //display: inline-block;
+    bottom: 37%;
+    //vertical-align: middle;
     background-color: white;
     border-radius: 50%;
     z-index: 2;
