removed exmaple menu

--- a/wbs-alarm/wbs-frontend/src/app/views/example/example-view.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/example/example-view.component.html
@@ -1,4 +1,1 @@
-<terra-2-col mobileRouting>
-    <main-menu left></main-menu>
-    <overview-view right></overview-view>
-</terra-2-col>
+<overview-view></overview-view>
