added router outlet to system tree

--- a/wbs-alarm/wbs-frontend/src/app/views/system/system.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/system.component.html
@@ -3,6 +3,9 @@
         <terra-2-col>
             <terra-node-tree [inputConfig]="nodeTreeConfig" left>
             </terra-node-tree>
+            <div class="router-outlet" right>
+                <router-outlet></router-outlet>
+            </div>
         </terra-2-col>
     </div>
 </div>
