- added method to create new carrier and styled the menu

--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
@@ -12,6 +12,8 @@
 
 .menu-entry
 {
+  font-weight: var(--font-weight-2) !important;
+  font-size: var(--font-size-2) !important;
   color: white;
   position: relative;
   vertical-align: middle;
