--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!isLoginActive" class="navigation-bar">
 
 <div *ngFor="let menuItem of menu" class="menu-entry" (click)="navigate(menuItem.url)">
-        <p class="caption">{{ menuItem.name }}</p>
+        <div class="caption">{{ menuItem.name }}</div>
 </div>
     <div class="menu-entry-user">
         <img id="user-icon" class="user-icon" [src]="userImageLink"/>
