implemented lazy loading for carriers

--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/carrier/system-carrier.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/carrier/system-carrier.component.html
@@ -1,16 +1,16 @@
 <div class="view">
-    <div>
-        <h1></h1>
-    </div>
-    <div class="btn-toolbar">
+    <div class="btn-toolbar" role="toolbar">
         <terra-button inputIcon='icon-save'
                       [inputCaption]="'Speichern'"
                       (outputClicked)="saveCarrier()">
         </terra-button>
     </div>
     <div class="system-view-container">
-        <terra-text-input [inputName]="'Name'"
-                            [(ngModel)]="newCarrierName">
-        </terra-text-input>
+        <terra-portlet
+                [inputPortletHeader]="'Neuen Träger anlegen'">
+            <terra-text-input [inputName]="'Name'"
+                              [(ngModel)]="newCarrierName">
+            </terra-text-input>
+        </terra-portlet>
     </div>
 </div>
