--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/carrier/system-carrier.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/carrier/system-carrier.component.scss
@@ -1,11 +1,13 @@
-.view
+.btn-toolbar
 {
-  background-color: #55595c;
+  background-color: white;
+  border-radius: 1%;
+  padding-bottom: 2px;
+  padding-top: 2px;
 }
 
 .system-view-container
 {
   position: relative;
-  margin-top: 1%;
   width: 30%
 }
