added function to create new user

--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/user/new/system-new-user.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/user/new/system-new-user.component.html
@@ -1,1 +1,15 @@
-Neuer Benutzer
+<div class="btn-toolbar">
+    <terra-button [inputIcon]="'icon-save'"
+                  [inputCaption]="'Speichern'"
+                  (outputClicked)="save()">
+    </terra-button>
+</div>
+
+<terra-portlet [inputPortletHeader]="'Neuen Benutzer anlegen'">
+    <terra-text-input [inputName]="'Name'"
+                      [(ngModel)]="newUser.name">
+    </terra-text-input>
+    <terra-text-input [inputName]="'Passwort'"
+                      [(ngModel)]="newUser.password">
+    </terra-text-input>
+</terra-portlet>
