added edit user mask

--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/user/new/system-new-user.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/user/new/system-new-user.component.html
@@ -10,6 +10,7 @@
                       [(ngModel)]="newUser.name">
     </terra-text-input>
     <terra-text-input [inputName]="'Passwort'"
-                      [(ngModel)]="newUser.password">
+                      [(ngModel)]="newUser.password"
+                      [inputIsPassword]="true">
     </terra-text-input>
 </terra-portlet>
