fixed editing user

--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/user/new/system-new-user.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/user/new/system-new-user.component.html
@@ -7,7 +7,7 @@
 
 <terra-portlet [inputPortletHeader]="'Neuen Benutzer anlegen'">
     <terra-text-input [inputName]="'Name'"
-                      [(ngModel)]="newUser.name">
+                      [(ngModel)]="newUser.username">
     </terra-text-input>
     <terra-text-input [inputName]="'Passwort'"
                       [(ngModel)]="newUser.password"
