--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/user/system-user.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/user/system-user.component.html
@@ -1,21 +1,23 @@
-<div class="btn-toolbar">
-    <terra-button [inputIcon]="'icon-save'"
-                  [inputCaption]="'Speichern'"
-                  (outputClicked)="save()">
-    </terra-button>
-</div>
-
-<terra-portlet [inputPortletHeader]="'Benutzer bearbeiten'">
-    <terra-text-input [inputName]="'Name'"
-                      [(ngModel)]="editedUser.username"
-                        [inputIsDisabled]="true">
-    </terra-text-input>
-
-    <terra-text-input [inputName]="'E-Mail'"
-                      [(ngModel)]="editedUser.mail">
-    </terra-text-input>
-
-    <terra-checkbox [(ngModel)]="editedUser.einkaeufer"
-                    [inputCaption]="'Einkäufer'">
-    </terra-checkbox>
-</terra-portlet>
+<ng-container *ngIf="routeData$ | async as routeData">
+    <div class="btn-toolbar">
+        <terra-button [inputIcon]="'icon-save'"
+                      [inputCaption]="'Speichern'"
+                      (outputClicked)="save(routeData.user)">
+        </terra-button>
+    </div>
+    
+    <terra-portlet [inputPortletHeader]="'Benutzer bearbeiten'">
+        <terra-text-input [inputName]="'Name'"
+                          [(ngModel)]="routeData.user.username"
+                          [inputIsDisabled]="true">
+        </terra-text-input>
+        
+        <terra-text-input [inputName]="'E-Mail'"
+                          [(ngModel)]="routeData.user.mail">
+        </terra-text-input>
+        
+        <terra-checkbox [(ngModel)]="routeData.user.einkaeufer"
+                        [inputCaption]="'Einkäufer'">
+        </terra-checkbox>
+    </terra-portlet>
+</ng-container>
