--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/user/new/system-new-user.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/user/new/system-new-user.component.html
@@ -1,9 +1,9 @@
-<div class="btn-toolbar">
+<terra-base-toolbar>
     <terra-button [inputIcon]="'icon-save'"
                   [inputCaption]="'Speichern'"
                   (outputClicked)="save()">
     </terra-button>
-</div>
+</terra-base-toolbar>
 
 <terra-portlet [inputPortletHeader]="'Neuen Benutzer anlegen'">
     <terra-text-input [inputName]="'Name'"
