--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
@@ -1,25 +1,27 @@
-<form>
-    <terra-portlet class="login-portlet">
-        <h2>Willkommen in der WBS Kleiderkammer</h2>
-        <terra-text-input name="first"
-            [inputName]="'Benutzername'"
-                          [(ngModel)]="user.name">
-        </terra-text-input>
-        <terra-text-input name="second"
-            [inputName]="'Passwort'"
-                          [(ngModel)]="user.password"
-                          [inputIsPassword]="true">
-        </terra-text-input>
-        <!--<terra-select-box-->
-        <!--[inputName]="'Sprache'"-->
-        <!--[inputListBoxValues]="languages"-->
-        <!--[(ngModel)]="user.language">-->
-        <!--</terra-select-box>-->
-        
-        <terra-button name="third"
-                        [inputType]="submit"
-                      [inputCaption]="'Anmelden'"
-                      (outputClicked)="login()">
-        </terra-button>
-    </terra-portlet>
-</form>
+<div class="view">
+    <form>
+        <terra-portlet class="login-portlet">
+            <h2>Willkommen in der WBS Kleiderkammer</h2>
+            <terra-text-input name="first"
+                              [inputName]="'Benutzername'"
+                              [(ngModel)]="user.name">
+            </terra-text-input>
+            <terra-text-input name="second"
+                              [inputName]="'Passwort'"
+                              [(ngModel)]="user.password"
+                              [inputIsPassword]="true">
+            </terra-text-input>
+            <!--<terra-select-box-->
+            <!--[inputName]="'Sprache'"-->
+            <!--[inputListBoxValues]="languages"-->
+            <!--[(ngModel)]="user.language">-->
+            <!--</terra-select-box>-->
+
+            <terra-button name="third"
+                          [inputType]="submit"
+                          [inputCaption]="'Anmelden'"
+                          (outputClicked)="login()">
+            </terra-button>
+        </terra-portlet>
+    </form>
+</div>
