--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.scss
@@ -2,5 +2,12 @@
 {
   position: absolute;
   left: 35%;
-  top: 35%;
+  top: 10%;
+}
+
+.view
+{
+  background-image: url(/assets/images/background-blue-blur-583715.jpg) no-repeat center center fixed;
+  width: 100%;
+  height: 100%;
 }
