- added deleting, creating and editing of categories

--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/categories/new/system-new-category.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/categories/new/system-new-category.component.html
@@ -1,1 +1,12 @@
-Neue Kategorie
+<terra-base-toolbar>
+    <terra-button [inputIcon]="'icon-save'"
+                  [inputCaption]="'Speichern'"
+                  (outputClicked)="save()">
+    </terra-button>
+</terra-base-toolbar>
+
+<terra-portlet [inputPortletHeader]="'Neue Kategorie anlegen'">
+    <terra-text-input [inputName]="'Name'"
+                      [(ngModel)]="categoryName">
+    </terra-text-input>
+</terra-portlet>
