--- a/wbs-alarm/wbs-frontend/src/app/app-wbs-kleiderkammer.scss
+++ b/wbs-alarm/wbs-frontend/src/app/app-wbs-kleiderkammer.scss
@@ -3,11 +3,11 @@
 @import "~@plentymarkets/terra-components/app/styles/styles";
 @import "~@plentymarkets/terra-components/app/styles/themes/theme-loader";
 
-.placer
-{
-  top: 6%;
-  position: absolute;
-  width: 100%;
-  height: 94%;
-}
+//.placer
+//{
+//  top: 6%;
+//  position: absolute;
+//  width: 100%;
+//  height: 94%;
+//}
 
