--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
@@ -1,61 +1,58 @@
 .navigation-bar
 {
-  width: 100%;
-  height: 6%;
-  position: absolute;
-  bottom: 94%;
-  min-height: 50px;
-  border-bottom: 1px solid white;
-  background-color: var(--color-structure-12);
-  z-index: 1;
+    width: 100%;
+    border-bottom: 1px solid white;
+    background-color: var(--color-structure-12);
+    z-index: 1;
+    height: 4rem;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .menu-entry
 {
-  font-weight: var(--font-weight-2) !important;
-  font-size: var(--font-size-2) !important;
-  color: white;
-  position: relative;
-  vertical-align: middle;
-  text-decoration: underline;
-  border-right: 1px solid lightgray;
-  padding-left: 20px;
-  padding-right: 20px;
-  height: 100%;
-  display: inline-block;
-  z-index: 2;
-
-  .caption
-  {
-    position: relative;
-    top: 30%
-  }
-
-  &:hover
-  {
-    background-color: var(--color-active);
-    cursor: pointer;
-  }
+    font-weight: var(--font-weight-2) !important;
+    font-size: var(--font-size-2) !important;
+    color: white;
+    text-decoration: underline;
+    border-right: 1px solid lightgray;
+    padding-left: 20px;
+    padding-right: 20px;
+    
+    .caption
+    {
+        position: relative;
+        top: 30%
+    }
+    
+    &:hover
+    {
+        background-color: var(--color-active);
+        cursor: pointer;
+    }
+    
+    .user-icon
+    {
+        background-color: white;
+        border-radius: 50%;
+        height: 76%;
+        top: 50%;
+        position: relative;
+        transform: translateY(-50%);
+    }
+    
+    
 }
 
-.menu-entry-user {
-  color: white;
-  position: absolute;
-  top: 35%;
-  vertical-align: middle;
-  left: 96.7%;
-  height: 100%;
-  bottom: 10%;
-  z-index: 2;
-
-  .user-icon
-  {
+.right
+{
     position: absolute;
-    height: 93%;
-    bottom: 37%;
-    background-color: white;
-    border-radius: 50%;
-    z-index: 2;
-  }
+    right: 0;
+    height: 4rem;
+    
+    &:hover
+    {
+    }
 }
+
 
