--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/user/system-user.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/user/system-user.component.html
@@ -19,5 +19,8 @@
         <terra-checkbox [(ngModel)]="routeData.user.einkaeufer"
                         [inputCaption]="'Einkäufer'">
         </terra-checkbox>
+        <terra-portlet [inputPortletHeader]="'Berechtigungen'">
+            <system-authorities [userId]="routeData.user.id"></system-authorities>
+        </terra-portlet>
     </terra-portlet>
 </ng-container>
