prepared for refreshing tree

--- a/wbs-alarm/wbs-frontend/src/app/views/system/system.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/system.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <terra-2-col>
+        <terra-2-col mobileRouting>
             <terra-node-tree [inputConfig]="nodeTreeConfig" left>
             </terra-node-tree>
             <div class="router-outlet" right>
