- fixed displaying of tree

--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
@@ -9,6 +9,11 @@
     justify-content: flex-start;
 }
 
+nav
+{
+    width: 100%;
+}
+
 .menu-entry
 {
     font-weight: var(--font-weight-2) !important;
