--- a/wbs-alarm/wbs-frontend/src/app/views/router/router-view.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/router/router-view.component.html
@@ -1,4 +1,4 @@
-<terra-breadcrumbs></terra-breadcrumbs>
+<!--<terra-breadcrumbs></terra-breadcrumbs>-->
 <div class="outlet-container">
     <router-outlet></router-outlet>
 </div>
