--- a/wbs-alarm/wbs-frontend/src/app/views/system/system.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/system.component.html
@@ -1,11 +1,13 @@
-<div class="container-fluid">
-    <div class="row">
-        <terra-2-col mobileRouting>
+<div class="container-fluid full-height">
+    <div class="row full-height">
+        <div class="tree-container col-3 col-lg-2">
             <terra-node-tree [inputConfig]="nodeTreeConfig" left>
             </terra-node-tree>
-            <div class="router-outlet" right>
-                <router-outlet></router-outlet>
-            </div>
-        </terra-2-col>
+        </div>
+    
+    
+        <div class="outlet-container col-9 col-lg-10'">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
