--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.html
@@ -3,13 +3,13 @@
     <!--<div *ngFor="let menuItem of menu" class="menu-entry" (click)="navigate(menuItem.url)">-->
     <!--        <div class="caption">{{ menuItem.name }}</div>-->
     <!--</div>-->
-    <!--    <div class="menu-entry right">-->
-    <!--        <img id="user-icon" class="user-icon" [src]="userImageLink"/>-->
-    <!--    </div>-->
+<!--        <div class="menu-entry right">-->
+<!--            <img id="user-icon" class="user-icon" [src]="userImageLink"/>-->
+<!--        </div>-->
     <!--</div>-->
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="navbar-brand">WBS Kleiderkammer</div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,10 +40,13 @@
                 <!--                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
                 <!--                </li>-->
             </ul>
+            <div class="form-inline my-2 my-lg-0 right">
+                <img id="user-icon" class="my-2 my-sm-0 user-icon" [src]="userImageLink"/>
+            </div>
             <!--            <form class="form-inline my-2 my-lg-0">-->
             <!--                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
             <!--                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
             <!--            </form>-->
         </div>
     </nav>
-    
+</div>
