--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
@@ -1,60 +1,63 @@
-.navigation-bar
-{
-    width: 100%;
-    border-bottom: 1px solid white;
-    background-color: var(--color-structure-12);
-    z-index: 1;
-    height: 4rem;
-    display: flex;
-    justify-content: flex-start;
-}
+//.navigation-bar
+//{
+//    width: 100%;
+//    border-bottom: 1px solid white;
+//    background-color: var(--color-structure-12);
+//    z-index: 1;
+//    height: 4rem;
+//    display: flex;
+//    justify-content: flex-start;
+//}
 
 nav
 {
     width: 100%;
 }
 
-.menu-entry
+.nav-item .nav-link
 {
-    font-weight: var(--font-weight-2) !important;
-    font-size: var(--font-size-2) !important;
-    color: white;
-    text-decoration: underline;
-    border-right: 1px solid lightgray;
-    padding-left: 20px;
-    padding-right: 20px;
-    
-    .caption
-    {
-        position: relative;
-        top: 30%
-    }
-    
-    &:hover
-    {
-        background-color: var(--color-active);
-        cursor: pointer;
-    }
+    cursor: pointer;
+}
+//
+//.menu-entry
+//{
+//    font-weight: var(--font-weight-2) !important;
+//    font-size: var(--font-size-2) !important;
+//    color: white;
+//    text-decoration: underline;
+//    border-right: 1px solid lightgray;
+//    padding-left: 20px;
+//    padding-right: 20px;
+//
+//    .caption
+//    {
+//        position: relative;
+//        top: 30%
+//    }
+//
+//    &:hover
+//    {
+//        background-color: var(--color-active);
+//        cursor: pointer;
+//    }
     
     .user-icon
     {
         background-color: white;
         border-radius: 50%;
-        height: 76%;
+        height: 100%;
         top: 50%;
         position: relative;
         transform: translateY(-50%);
     }
     
     
-}
+//}
 
 .right
 {
-    position: absolute;
-    right: 0;
-    height: 4rem;
-    
+    height: 3rem;
+
     &:hover
     {
     }
