- created new login and removed unnecessary code

--- a/wbs-alarm/wbs-frontend/src/app/app-wbs-kleiderkammer.scss
+++ b/wbs-alarm/wbs-frontend/src/app/app-wbs-kleiderkammer.scss
@@ -11,3 +11,10 @@
 //  height: 94%;
 //}
 
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background: #60a3bc !important;
+}
