- fixed behaviour of login guard

--- a/wbs-alarm/wbs-frontend/src/app/app-wbs-kleiderkammer.scss
+++ b/wbs-alarm/wbs-frontend/src/app/app-wbs-kleiderkammer.scss
@@ -12,9 +12,15 @@
 //}
 
 body,
-html {
+html
+{
     margin: 0;
     padding: 0;
     height: 100%;
-    background: #60a3bc !important;
+    background: #60a3bc;
+    
+    .isLoggedIn
+    {
+        background: white;
+    }
 }
