--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isLoginActive" class="navigation-bar">
+<div *ngIf="!globalRegistryService.isLoginActive" class="navigation-bar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="navbar-brand">WBS Kleiderkammer</div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
