--- a/wbs-alarm/wbs-frontend/src/app/views/start/start.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/start/start.component.scss
@@ -33,3 +33,19 @@ img
     width: 50%;
     padding: 12px 0;
 }
+
+.infos
+{
+    width: 100%;
+    
+    terra-portlet
+    {
+        width: 40%;
+        float: left;
+    }
+}
+
+.bottom-line
+{
+    width: 20%;
+}
