--- a/wbs-alarm/wbs-frontend/src/app/views/booking/booking-view.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/booking/booking-view.component.scss
@@ -1,18 +1,20 @@
-.headline
-{
+.headline {
     width: 100%;
     display: inline-flex;
 }
 
-.element
-{
+.element {
     width: 15%;
     padding-right: 20px;
     float: left;
 }
 
-.mode-chooser
-{
+.mode-chooser {
     width: 100%;
     padding-bottom: 25px;
+}
+
+.overview {
+    width: 100%;
+    padding-top: 20px;
 }
